Added experience page

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-  <section class="main-nav">
+  <div class="main-nav">
     <ul class="nav">
       <li class="name">Karim Gawish</li>
       <li><a href="index.html">Home</a></li>
-      <li><a href="goals.html">Goals</a></li>
+      <li><a href="experience.html">Experience</a></li>
     </ul>
-  </section>
+  </div>
   <header>
     <img src="images/dp.png" alt="Photo of Karim Gawish" class="profile-image">
     <h1 class="tag name">Hello, I’m Karim.</h1>
@@ -24,13 +24,13 @@
   </header>
   <main class="flex">
     <section class="card">
-      <h2>Background</h2>
+      <h2>About Me</h2>
       <p>I'm in the process of shifting my career to become a software developer, I have several ideas for web applications that I can't wait to gain the know-how needed to execute it. </p>
       <p>My whole career has been in film making but I think it is time for me to start learning new skills and earning experience in a different field.</p>
       <p> I've started my learning trip at Treehouse studying Front End Web Development.</p>
     </section>
     <section class="card">
-      <h2>Goals</h2>
+      <h2>Experience</h2>
       <p>I want to eventually become an adept software developer with skills and abilities in:</p>
       <ul class="skills">
         <li>HTML</li>
@@ -40,7 +40,7 @@
         <li>API</li>
       </ul>
       <p>I'd love to work at a leading software company, while also working on several personal projects/apps I aspire to execute on my own.</p>
-      <p><a href="goals.html">Read More</a></p>
+      <p><a href="experience.html">Read More</a></p>
     </section>
     <section class="card">
       <h2>Interests</h2>
