Added wishlist page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li class="name">Karim Gawish</li>
       <li><a href="index.html">Home</a></li>
       <li><a href="experience.html">Experience</a></li>
+      <li><a href="wishlist.html">Wishlist</a></li>
     </ul>
   </div>
   <header>
@@ -25,8 +26,8 @@
   <main class="flex">
     <section class="card">
       <h2>About Me</h2>
-      <p>I'm in the process of shifting my career to become a software developer, I have several ideas for web applications that I can't wait to gain the know-how needed to execute it. </p>
-      <p>My whole career has been in film making but I think it is time for me to start learning new skills and earning experience in a different field.</p>
+      <p>I'm in the process of shifting my career to become a software developer, I have several ideas for web applications that I can't wait to gain the know-how needed to develop them. </p>
+      <p>My whole career has been in film making but I think it's time for me to start learning new skills and earning experience in a different field.</p>
       <p> I've started my learning trip at Treehouse studying Front End Web Development.</p>
     </section>
     <section class="card">
@@ -45,7 +46,7 @@
     <section class="card">
       <h2>Interests</h2>
       <p>I watch football or soccer if you're from the US.</p>
-      <p>I love boxing as well, and I've got a <em>Mike Tyson</em> signed boxing gloves to show for it!</p>
+      <p>I'm also a huge fan of boxing, and I've got a <em>Mike Tyson</em> signed boxing gloves to show for it!</p>
       <img src="images/mike.png" alt="Karim with Mike Tyson" class="interests-image">
     </section>
   </main>
