--- a/wishlist.html
+++ b/wishlist.html
@@ -25,22 +25,18 @@
   </header>
   <main class="flex">
     <section class="card">
-      <h2>Experience</h2>
-      <p>In the past week I've picked up some basic skills in the following: </p>
-      <ul class="skills">
-        <li>Html</li>
-        <li>CSS</li>
-      </ul>
-      <p>Next up I should get more advanced in the above and then delve into the following:</p>
-      <ul class="skills">
-        <li>Javascript</li>
-        <li>Web Design</li>
-      </ul>
+      <h2>Wishlist</h2>
+      <p>For now I have the following applications on my wishlist to one day create: </p>
+      <h4 class="wishlist">Elder's Home Nursing App</h4>
+      <p>An app that can connect nurses with elder people to make requests based on their requirements, budget and location.</p>
+      <h4 class="wishlist">Underground Concert App</h4>
+      <p>An app to show people underground concerts nearby in Cairo.</p>
+      <p><em>If you have an app idea that you think suits my current skills please tweet me <a href="https://twitter.com/KarimGawish" target="_blank">@karimgawish</a></em></p>
     </section>
   </main>
   <footer>
     <ul>
-      <li><a href="https://twitter.com/KarimGawish" class="social twitter" target="_blank">Twitter</a></li>
+      <li><a href=" https://twitter.com/KarimGawish" class="social twitter" target="_blank">Twitter</a></li>
       <li><a href="https://www.linkedin.com/in/karim-gawish-0589a927/" class="social linkedin" target="_blank">LinkedIn</a></li>
       <li><a href="https://github.com/karimgawish" class="social github" target="_blank">Github</a></li>
     </ul>
