--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-  <div class="main-nav">
+  <nav class="main-nav">
     <ul class="nav">
       <li class="name">Karim Gawish</li>
       <li><a href="index.html">Home</a></li>
       <li><a href="experience.html">Experience</a></li>
       <li><a href="wishlist.html">Wishlist</a></li>
     </ul>
-  </div>
+  </nav>
   <header>
     <img src="images/dp.png" alt="Photo of Karim Gawish" class="profile-image">
     <h1 class="tag name">Hello, I’m Karim.</h1>
